Add CouchDB document retrieval cell back in

--- a/src/workflow_lifetime.ipynb
+++ b/src/workflow_lifetime.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 1,
    "id": "56f89c17",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85b909c1",
    "metadata": {},
    "outputs": [],
@@ -49,6 +49,25 @@
     "JSON format information is retrieved from the CMS Request Manager system through its REST API.\n",
     "\n",
     "Note that this request can take a minute or more, given that we pull almost 2GB of raw data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a1de6f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "headers = {\"Content-type\": \"application/json\", \"Accept\": \"application/json\"}\n",
+    "couchUrl = \"https://cmsweb.cern.ch/couchdb/reqmgr_workload_cache/_design/ReqMgr/_view/bydate\"\n",
+    "queryParams = {\"startkey\": \"[2023,7,1]\", \"endkey\": \"[2024,6,30]\", \"include_docs\": True}\n",
+    "raw_data = requests.get(couchUrl, params=queryParams, headers=headers, cert=(myCert, myKey), verify=False)\n",
+    "#print(data)\n",
+    "if raw_data.ok is True:\n",
+    "    raw_data = raw_data.json()['rows']\n",
+    "print(f\"Total number of workflows: {len(raw_data)}\")"
    ]
   },
   {
